# depthai-imu

./: .gitmodules  CMakeLists.txt
src/: main.cpp
test/: test.cpp
